--- a/demo-app/pom.xml
+++ b/demo-app/pom.xml
@@ -77,6 +77,13 @@
       <version>1.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>4.0.19</version>
+      <type>pom</type>
+    </dependency>
+
   </dependencies>
 
   <build>
