--- a/demo-app/src/main/resources/application.yaml
+++ b/demo-app/src/main/resources/application.yaml
@@ -3,12 +3,14 @@ spring.datasource.url: jdbc:h2:file:./camunda-h2-database
 camunda:
   bpm:
     admin-user:
-      id: demo
-      password: demo
+      id: eurodyn
+      password: eurodyn
 
     deployment-resource-pattern:
       - classpath*:**/*.bpmn
       - classpath*:**/*.form
+    authorization:
+      enabled: true
 
 logging:
   level:
